# aimaster

./: Makefile  README.md  data.dvc  pyproject.toml
.dvc/: config
docs/: mkdocs.yml
docs/docs/: index.md
